--- a/risk.html
+++ b/risk.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Veloci Global Markets | Risk Disclosure</title>
 
-  <meta name="description" content="Veloci Global Markets Risk Disclosure outlining trading and investment risks, volatility, leverage, and important warnings." />
+  <meta name="description" content="Veloci Global Markets Risk Disclosure. CFDs and leveraged products carry a high level of risk and may not be suitable for all investors." />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#050a18" />
 
@@ -22,6 +22,7 @@
       --brand:#3b82f6;
       --brand2:#6366f1;
       --ok:#22c55e;
+      --warn:#fbbf24;
       --err:#f87171;
 
       --shadow: 0 30px 120px rgba(0,0,0,.62);
@@ -49,7 +50,7 @@
     }
 
     /* =========================================================
-       ✅ Particle Starfield Background (INDEX MATCH)
+       ✅ Particle Starfield Background (MATCH INDEX/ABOUT)
     ========================================================= */
     #particleBg{
       position: fixed;
@@ -317,7 +318,6 @@
       scroll-margin-top: 110px;
     }
 
-    /* ✅ reveal */
     .reveal{
       opacity:0;
       transform: translateY(26px) scale(.985);
@@ -329,7 +329,7 @@
       transform: translateY(0) scale(1);
     }
 
-    /* ✅ page hero */
+    /* ✅ Hero card */
     .pageHero{
       padding:70px 0 10px;
     }
@@ -368,8 +368,8 @@
     }
     .pageKicker b{
       color:#fff;
-      background: rgba(59,130,246,.18);
-      border:1px solid rgba(96,165,250,.28);
+      background: rgba(251,191,36,.16);
+      border:1px solid rgba(251,191,36,.25);
       padding:4px 8px;
       border-radius:999px;
       font-size:12px;
@@ -381,7 +381,7 @@
       line-height:1.08;
       letter-spacing:-1px;
       font-weight:1200;
-      background: linear-gradient(90deg, #eaf0ff, #9cc7ff, #aab4ff);
+      background: linear-gradient(90deg, #eaf0ff, #ffe7a3, #aab4ff);
       -webkit-background-clip:text;
       background-clip:text;
       color:transparent;
@@ -397,14 +397,14 @@
       font-weight:900;
     }
 
-    /* ✅ content layout */
-    .docWrap{
+    /* ✅ Content cards */
+    .policyWrap{
       margin-top:16px;
       display:grid;
       grid-template-columns: 1fr;
       gap:16px;
     }
-    .docCard{
+    .policyCard{
       border-radius:24px;
       border:1px solid rgba(255,255,255,.14);
       background: rgba(255,255,255,.05);
@@ -413,32 +413,32 @@
       position:relative;
       overflow:hidden;
     }
-    .docCard::before{
+    .policyCard::before{
       content:"";
       position:absolute;
       inset:-90px;
-      background: radial-gradient(circle at 30% 20%, rgba(96,165,250,.18), transparent 62%);
+      background: radial-gradient(circle at 30% 20%, rgba(251,191,36,.16), transparent 62%);
       filter: blur(22px);
-      opacity:.85;
+      opacity:.78;
       pointer-events:none;
     }
-    .docCard > *{ position:relative; z-index:1; }
+    .policyCard > *{ position:relative; z-index:1; }
 
-    .docCard h3{
+    .policyCard h3{
       margin:0 0 8px;
       font-size:18px;
       font-weight:1300;
       letter-spacing:-.35px;
       color:#eaf0ff;
     }
-    .docCard p{
+    .policyCard p{
       margin:10px 0 0;
       color:rgba(234,240,255,.72);
       line-height:1.75;
       font-size:14px;
       font-weight:900;
     }
-    .docCard ul{
+    .policyCard ul{
       margin:10px 0 0 18px;
       padding:0;
       color:rgba(234,240,255,.72);
@@ -446,20 +446,20 @@
       font-size:14px;
       font-weight:900;
     }
-    .docCard li{ margin:8px 0; }
+    .policyCard li{ margin:8px 0; }
 
-    /* ✅ alert box */
-    .alert{
+    .notice{
       margin-top:14px;
       border-radius:18px;
-      border:1px solid rgba(248,113,113,.22);
+      border:1px solid rgba(251,191,36,.28);
       background: rgba(2,6,23,.28);
       padding:14px 14px;
-      color:rgba(234,240,255,.78);
+      color:rgba(234,240,255,.80);
       font-weight:1000;
       line-height:1.75;
       font-size:13.5px;
     }
+    .notice b{ color:#fff; }
 
     /* ✅ Footer */
     footer{
@@ -570,7 +570,7 @@
 </head>
 <body>
 
-<!-- ✅ Background like INDEX -->
+<!-- ✅ Background -->
 <div id="particleBg" aria-hidden="true"></div>
 
 <!-- ✅ Top bar -->
@@ -583,7 +583,6 @@
       <div style="display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:flex-end;">
         <select id="langSelect" class="langSelect" aria-label="Translate this page">
           <option value="">Translate</option>
-
           <option value="af">Afrikaans</option><option value="sq">Albanian</option><option value="am">Amharic</option>
           <option value="ar">Arabic</option><option value="hy">Armenian</option><option value="az">Azerbaijani</option>
           <option value="eu">Basque</option><option value="be">Belarusian</option><option value="bn">Bengali</option>
@@ -673,147 +672,155 @@
   </div>
 </header>
 
-<!-- ✅ Page Hero -->
+<!-- ✅ Hero -->
 <section class="pageHero reveal">
   <div class="container">
     <div class="heroCard">
-      <div class="pageKicker"><b>Disclosure</b> Trading Risk Notice</div>
+      <div class="pageKicker"><b>Warning</b> Risk Disclosure & Suitability</div>
       <h1 class="heroTitle">Risk Disclosure</h1>
       <p class="heroSub">
-        This Risk Disclosure statement is provided to outline the nature of trading and investment risks.
-        You should read this document carefully before using the Platform and making any trading or investment decisions.
+        Trading and investing in leveraged instruments, including Contracts for Difference (CFDs), foreign exchange (FX),
+        cryptoassets, indices, commodities, and related derivatives, involves a high level of risk and may not be suitable
+        for all investors. You should carefully assess your financial situation, objectives, and risk tolerance prior to
+        engaging with any product or service.
       </p>
 
-      <div class="alert">
-        <b>High Risk Warning:</b> Trading leveraged instruments (including CFDs), FX, commodities, indices and digital assets
-        involves a high level of risk and may not be suitable for all investors. You may lose all or more than your deposited funds.
+      <div class="notice">
+        <b>Important:</b> You can lose more than your initial capital. Past performance does not guarantee future results.
+        If you do not fully understand the risks, seek independent professional advice.
       </div>
     </div>
   </div>
 </section>
 
-<!-- ✅ Risk Disclosure Content -->
+<!-- ✅ Content -->
 <section class="reveal">
   <div class="container">
-    <div class="docWrap">
+    <div class="policyWrap">
 
-      <div class="docCard">
-        <h3>1. No Advice / Educational Information Only</h3>
+      <div class="policyCard">
+        <h3>1. No Investment Advice</h3>
         <p>
-          Any information, charts, market content, indicators, projections, calculators, or tools made available on the Platform
-          are provided for informational and general educational purposes only. Nothing on the Platform constitutes investment,
-          financial, legal, regulatory, or tax advice.
-        </p>
-        <p>
-          You should obtain independent professional advice prior to making any trading decisions.
+          Information provided on this website or within the client portal is for general informational purposes only and does not
+          constitute financial, investment, legal, or tax advice. Any market commentary, analytics, or projections are not
+          recommendations and should not be relied upon as such.
         </p>
       </div>
 
-      <div class="docCard">
-        <h3>2. Risk of Loss</h3>
+      <div class="policyCard">
+        <h3>2. Product Complexity & Leverage</h3>
         <p>
-          Trading and investing are speculative and involve risk. You acknowledge and agree that:
+          CFDs and leveraged products are complex instruments and carry a high risk of losing money rapidly due to leverage.
+          Leverage magnifies both gains and losses. Small market movements can materially impact your equity, margin level,
+          and liquidation risk.
         </p>
         <ul>
-          <li>You may lose all of your invested capital.</li>
-          <li>Markets can move rapidly and unpredictably.</li>
-          <li>Past performance does not guarantee future results.</li>
-          <li>Returns are not guaranteed under any circumstance.</li>
+          <li>Margin calls may occur with little or no notice.</li>
+          <li>Positions may be automatically closed if margin requirements are not met.</li>
+          <li>Losses may exceed deposits depending on market conditions and execution.</li>
         </ul>
       </div>
 
-      <div class="docCard">
-        <h3>3. Leverage & Margin</h3>
+      <div class="policyCard">
+        <h3>3. Market Volatility & Gaps</h3>
         <p>
-          Leverage amplifies both gains and losses. When trading leveraged products:
+          Financial markets may be highly volatile. Prices can change rapidly and unpredictably, especially during major news
+          releases, political events, economic announcements, or low liquidity conditions.
         </p>
         <ul>
-          <li>Small market movements may result in disproportionately large losses.</li>
-          <li>Margin requirements may change without notice.</li>
-          <li>You may be required to deposit additional funds at short notice (“margin calls”).</li>
-          <li>Positions may be liquidated without your consent if margin is insufficient.</li>
+          <li>Market gapping may prevent stop orders from executing at requested levels.</li>
+          <li>Extreme volatility may cause slippage and delayed execution.</li>
+          <li>Cryptoassets may exhibit substantially higher volatility than traditional assets.</li>
         </ul>
       </div>
 
-      <div class="docCard">
-        <h3>4. Volatility Risk</h3>
+      <div class="policyCard">
+        <h3>4. Execution Risk, Slippage & Liquidity</h3>
         <p>
-          Prices of financial instruments and digital assets may fluctuate significantly due to macroeconomic events, monetary policy,
-          market sentiment, liquidity changes, technical factors, regulatory developments, and unexpected geopolitical events.
+          Orders are subject to execution risk. The price at which an order is executed may differ from the price requested.
+          Slippage may occur in fast-moving markets. Liquidity may be limited, causing wider spreads and partial fills.
+        </p>
+        <p>
+          Under certain market conditions, it may be difficult or impossible to close a position at the desired price.
         </p>
       </div>
 
-      <div class="docCard">
-        <h3>5. Liquidity & Execution Risk</h3>
+      <div class="policyCard">
+        <h3>5. Counterparty & Platform Risk</h3>
         <p>
-          Certain instruments may experience low liquidity, slippage, widening spreads, delayed execution, or significant
-          gaps in price. You understand that:
+          Trading is subject to counterparty risk (the risk that the service provider fails to perform obligations).
+          Additionally, technology-based services carry operational risks such as:
         </p>
         <ul>
-          <li>Orders may execute at a materially different price than requested.</li>
-          <li>Stop-loss levels may not prevent losses during fast-moving conditions.</li>
-          <li>Execution may be impacted by internet connection, device performance, and market conditions.</li>
+          <li>Network interruptions, outages, maintenance windows, system delays.</li>
+          <li>Hardware/software failures or integration provider downtime.</li>
+          <li>Connectivity limitations between user devices and service infrastructure.</li>
         </ul>
       </div>
 
-      <div class="docCard">
-        <h3>6. Digital Asset (Crypto) Risks</h3>
+      <div class="policyCard">
+        <h3>6. Cryptoasset Risks</h3>
         <p>
-          Digital assets are highly volatile and may be subject to greater risks than traditional instruments. These include:
+          Cryptoassets are speculative and may not be regulated in some jurisdictions. They can be impacted by sudden
+          regulatory changes, protocol vulnerabilities, exchange disruptions, and custody risks.
         </p>
         <ul>
-          <li>Extreme volatility and rapid price swings.</li>
-          <li>Market manipulation risk and low liquidity in certain tokens.</li>
-          <li>Technology risk (protocol bugs, network congestion, outages).</li>
-          <li>Custody, theft, hacking, and irreversible transaction risks.</li>
-          <li>Uncertain legal/regulatory treatment depending on jurisdiction.</li>
+          <li>Hard forks and chain splits may impact pricing and asset continuity.</li>
+          <li>Loss of private keys or wallet compromise can cause irreversible losses.</li>
+          <li>Market manipulation and sudden liquidity drops can occur.</li>
         </ul>
       </div>
 
-      <div class="docCard">
-        <h3>7. System & Technology Risks</h3>
+      <div class="policyCard">
+        <h3>7. Fees, Spreads & Financing Costs</h3>
         <p>
-          The Platform may experience outages, maintenance downtime, delays, interruptions, or failures due to:
+          Trading costs may materially affect performance. Costs may include spreads, commissions, rollovers, financing
+          charges, and other operational fees. Holding leveraged positions overnight may increase costs.
+        </p>
+      </div>
+
+      <div class="policyCard">
+        <h3>8. Performance & Projections Disclaimer</h3>
+        <p>
+          Any performance metrics, projections, examples, or simulations shown on the Platform are hypothetical and are
+          provided for illustrative purposes only. They do not represent guaranteed results.
         </p>
         <ul>
-          <li>Hardware, software or network failures.</li>
-          <li>Third-party service disruptions (market data, hosting, APIs).</li>
-          <li>Cybersecurity incidents including hacking or unauthorized access attempts.</li>
+          <li>Simulated performance may not reflect real market conditions.</li>
+          <li>Results can differ materially due to execution, liquidity, and user behavior.</li>
+          <li>Past performance does not guarantee future outcomes.</li>
         </ul>
+      </div>
+
+      <div class="policyCard">
+        <h3>9. Suitability & Responsibility</h3>
         <p>
-          We do not guarantee uninterrupted access or error-free functionality.
+          You are solely responsible for determining whether any product is appropriate for your circumstances. You should
+          understand how CFDs and leveraged trading work and whether you can afford the risk of losing money.
         </p>
       </div>
 
-      <div class="docCard">
-        <h3>8. Currency & Conversion Risk</h3>
+      <div class="policyCard">
+        <h3>10. Restricted Jurisdictions</h3>
         <p>
-          If you deposit or transact in a currency different from your base currency, you may incur conversion costs and exchange rate
-          losses. Currency fluctuations can materially impact the value of your capital and returns.
+          Veloci Global Markets does not provide certain products/services to residents of restricted jurisdictions. Access
+          may be limited based on local laws, regulations, compliance obligations, or internal policy. Users are responsible
+          for ensuring their use of the Platform is lawful in their jurisdiction.
         </p>
       </div>
 
-      <div class="docCard">
-        <h3>9. Regulatory & Legal Risk</h3>
+      <div class="policyCard">
+        <h3>11. Independent Advice</h3>
         <p>
-          Regulations may change quickly and may impact market access, instrument availability, leverage caps, and the legal status of
-          certain products. You are solely responsible for understanding applicable regulations in your jurisdiction.
+          If you are uncertain about the risks involved, you should seek independent financial, legal, and tax advice from a
+          suitably qualified professional. Ensure you fully understand all risks prior to trading.
         </p>
       </div>
 
-      <div class="docCard">
-        <h3>10. Responsibility & Acknowledgment</h3>
+      <div class="policyCard">
+        <h3>12. Contact</h3>
         <p>
-          By using this Platform, you confirm you understand and accept these risks. You agree that you are solely responsible for
-          your trading decisions, and you will not hold Veloci Global Markets liable for losses arising from market movements, execution,
-          platform availability, third-party disruptions, or your own decisions.
-        </p>
-      </div>
-
-      <div class="docCard">
-        <h3>11. Contact</h3>
-        <p>
-          For questions about this Risk Disclosure, contact:
+          If you have questions about this Risk Disclosure, contact:
           <b>support@veloci-global-markets.online</b>
         </p>
       </div>
@@ -921,7 +928,7 @@ function setGoogleTranslateLang(lang){
 })();
 
 /* =========================================================
-   ✅ Reveal animations
+   ✅ Reveal
 ========================================================= */
 (function initReveal(){
   const items = document.querySelectorAll(".reveal");
