--- a/faq.html
+++ b/faq.html
@@ -1038,6 +1038,69 @@ const FAQ = [
     a:`Check your spam/junk folder first. Confirm your email address is correct, then request a new link from the login/sign-up flow. If the issue persists, contact support for manual assistance.`,
     tags:["missing","verification","email","spam","resend"]
   },
+
+  /* ✅ ADDED ONLY: Detailed Trading Education Questions */
+  {
+    cat:"platform",
+    q:"What is Forex Trading?",
+    desc:"A detailed explanation of foreign exchange trading.",
+    a:`<b>Forex trading</b> (foreign exchange trading) is the buying and selling of currencies in the global FX market. Traders aim to profit from changes in exchange rates between currency pairs such as <b>EUR/USD</b>, <b>GBP/USD</b>, or <b>USD/JPY</b>.<br/><br/>
+      <b>How it works:</b>
+      <ul>
+        <li>Currencies are traded in pairs. One currency is bought while the other is sold.</li>
+        <li>Price movement is measured in <b>pips</b> (small changes in value).</li>
+        <li>The FX market is open <b>24 hours a day, 5 days a week</b>, making it the largest financial market globally.</li>
+      </ul>
+      <b>Main drivers of Forex prices:</b>
+      <ul>
+        <li>Interest rate decisions by central banks (Fed, ECB, BoE, etc.).</li>
+        <li>Inflation reports, employment data, and GDP releases.</li>
+        <li>Geopolitical events and major economic news.</li>
+      </ul>
+      <b>Risk note:</b> Forex markets can move quickly, especially with leverage. Always trade responsibly and understand risk management.`,
+    tags:["forex","fx","currency","trading","pips","leverage"]
+  },
+  {
+    cat:"platform",
+    q:"What is Cryptocurrency Trading?",
+    desc:"A detailed explanation of digital asset trading.",
+    a:`<b>Cryptocurrency trading</b> is the buying and selling of digital assets such as <b>Bitcoin (BTC)</b>, <b>Ethereum (ETH)</b>, and other altcoins. Traders aim to profit from price fluctuations, volatility, and market trends.<br/><br/>
+      <b>How it works:</b>
+      <ul>
+        <li>Crypto assets trade on global exchanges, often <b>24/7</b> with no market close.</li>
+        <li>Prices are driven heavily by sentiment, adoption, supply/demand and liquidity.</li>
+        <li>Traders use technical analysis, market structure, and macro news to make decisions.</li>
+      </ul>
+      <b>Key crypto market characteristics:</b>
+      <ul>
+        <li><b>High volatility:</b> prices can swing rapidly within minutes.</li>
+        <li><b>Liquidity differences:</b> large coins are more stable than small-cap coins.</li>
+        <li><b>Blockchain factors:</b> halving events, network updates, fees, and regulation can impact price.</li>
+      </ul>
+      <b>Risk note:</b> Due to extreme volatility, crypto trading requires discipline, risk control, and proper position sizing.`,
+    tags:["crypto","cryptocurrency","bitcoin","ethereum","blockchain","volatility"]
+  },
+  {
+    cat:"platform",
+    q:"What is Stock Trading?",
+    desc:"A detailed explanation of equity market trading.",
+    a:`<b>Stock trading</b> is the process of buying and selling shares of publicly listed companies (equities) such as Apple, Tesla, Microsoft, or major indices like the S&P 500.<br/><br/>
+      <b>How it works:</b>
+      <ul>
+        <li>Stocks represent partial ownership in a company.</li>
+        <li>Traders profit by buying low and selling higher, or by short-selling if the platform supports it.</li>
+        <li>Stock markets are typically open during set hours (e.g. US markets operate weekdays).</li>
+      </ul>
+      <b>What moves stock prices:</b>
+      <ul>
+        <li>Company earnings reports and forward guidance.</li>
+        <li>News, product launches, acquisitions and management updates.</li>
+        <li>Macro conditions like inflation, interest rates and economic performance.</li>
+      </ul>
+      <b>Risk note:</b> Stocks can rise or fall based on market sentiment and company fundamentals. Diversification and strategy discipline are essential.`,
+    tags:["stocks","equities","shares","market","earnings","trading"]
+  },
+
   {
     cat:"security",
     q:"How do you keep my account secure?",
