--- a/contact.html
+++ b/contact.html
@@ -439,14 +439,7 @@
       gap:10px;
     }
     .cardTitle span{
-      font-size:12px;
-      font-weight:1100;
-      color:rgba(234,240,255,.65);
-      padding:6px 10px;
-      border-radius:999px;
-      border:1px solid rgba(255,255,255,.12);
-      background: rgba(2,6,23,.20);
-      white-space:nowrap;
+      display:none; /* ✅ removed labels from UI */
     }
 
     /* ✅ Contact methods */
@@ -464,13 +457,13 @@
       align-items:flex-start;
       justify-content:space-between;
       gap:12px;
-      min-width:0; /* ✅ allow flex children to shrink */
+      min-width:0;
     }
     .mLeft{
       display:flex;
       gap:12px;
-      min-width:0; /* ✅ needed for wrapping inside flex */
-      flex:1 1 auto; /* ✅ takes available space */
+      min-width:0;
+      flex:1 1 auto;
     }
     .mIcon{
       width:42px;height:42px;border-radius:16px;
@@ -483,7 +476,7 @@
     }
     .mIcon svg{width:20px;height:20px;opacity:.95;}
     .mText{
-      min-width:0; /* ✅ wraps long descriptions */
+      min-width:0;
       flex:1 1 auto;
     }
     .mText strong{
@@ -500,9 +493,9 @@
       font-weight:1000;
       color:rgba(234,240,255,.62);
       line-height:1.6;
-      white-space:normal;              /* ✅ allow wrapping */
-      overflow-wrap:anywhere;          /* ✅ force long text to wrap */
-      word-break:break-word;           /* ✅ mobile safe */
+      white-space:normal;
+      overflow-wrap:anywhere;
+      word-break:break-word;
     }
 
     .mValue{
@@ -516,7 +509,6 @@
       transition:.12s ease;
       align-self:flex-start;
 
-      /* ✅ FIX: allow phone/email to fit inside on mobile */
       white-space:normal;
       max-width: 52%;
       overflow-wrap:anywhere;
@@ -735,7 +727,7 @@
       .footerLogo{ height:30px; transform: scale(2.45); }
       .formRow{ grid-template-columns: 1fr; }
 
-      /* ✅ NEW MOBILE FIX: stack contact value under text when tight */
+      /* ✅ stack values under text on mobile */
       .method{
         flex-direction:column;
         align-items:stretch;
@@ -874,7 +866,7 @@
         <div class="card reveal">
           <div class="cardTitle">
             Direct Contact
-            <span>Backend-updatable</span>
+            <span></span>
           </div>
 
           <div class="methodList">
@@ -945,11 +937,11 @@
           <div class="status" id="contactStatus"></div>
         </div>
 
-        <!-- ✅ CONTACT FORM (ready for backend) -->
+        <!-- ✅ CONTACT FORM -->
         <div class="card reveal">
           <div class="cardTitle">
             Send a Message
-            <span>Backend-ready</span>
+            <span></span>
           </div>
 
           <form id="contactForm" autocomplete="on">
@@ -1146,8 +1138,7 @@ function setGoogleTranslateLang(lang){
 })();
 
 /* =========================================================
-   ✅ BACKEND-EDITABLE CONTACT SETTINGS
-   You will replace CONTACT_CONFIG_ENDPOINT with your backend later.
+   ✅ CONTACT SETTINGS
 ========================================================= */
 const CONTACT_CONFIG_ENDPOINT = "/api/public/contact";
 
@@ -1219,7 +1210,7 @@ async function loadContactConfig(){
 
     if(status){
       status.className = "status ok";
-      status.textContent = "Contact information loaded from backend configuration.";
+      status.textContent = "Contact information loaded successfully.";
     }
   }catch(e){
     setContactUI(DEFAULT_CONTACT);
@@ -1233,7 +1224,7 @@ async function loadContactConfig(){
 loadContactConfig();
 
 /* =========================================================
-   ✅ CONTACT FORM (backend-ready)
+   ✅ CONTACT FORM
 ========================================================= */
 const FORM_ENDPOINT = "/api/public/contact-message";
 
