--- a/login.html
+++ b/login.html
@@ -6,7 +6,10 @@
 <title>Login - Veloci Global Markets</title>
 
 <meta name="description" content="Secure client login for Veloci Global Markets. Access your account dashboard and manage your profile securely."/>
-<meta name="robots" content="index, follow"/>
+<!-- ✅ IMPORTANT: do NOT index login pages (prevents phishing flag) -->
+<meta name="robots" content="noindex, nofollow"/>
+<meta name="theme-color" content="#020617"/>
+<link rel="canonical" href="https://veloci-global-markets.online/login.html"/>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
@@ -21,6 +24,7 @@
     --brand1:#3b82f6;
     --brand2:#2563eb;
     --ok:#22c55e;
+    --warn:#fbbf24;
     --err:#f87171;
   }
 
@@ -108,7 +112,6 @@
     }
   }
 
-  /* ✅ FIX: prevent "Login" text from clipping */
   h1{
     margin:12px 0 0;
     padding:0 0 2px;
@@ -128,13 +131,72 @@
     margin-top:8px;
     color: var(--muted);
     font-size:16px;
-    margin-bottom:14px;
+    margin-bottom:10px;
+  }
+
+  /* ✅ NEW: trust banner (anti-phishing) */
+  .securityBanner{
+    margin:14px 0 10px;
+    border-radius:14px;
+    border:1px solid rgba(255,255,255,0.12);
+    background: rgba(2,6,23,0.35);
+    padding:12px 12px;
+    box-shadow: 0 16px 45px rgba(0,0,0,.22);
+  }
+  .secTop{
+    display:flex;
+    gap:10px;
+    align-items:flex-start;
+  }
+  .secIcon{
+    width:38px;height:38px;border-radius:14px;
+    background: rgba(34,197,94,.10);
+    border:1px solid rgba(34,197,94,.20);
+    display:grid;place-items:center;
+    flex:0 0 auto;
+    box-shadow: 0 12px 34px rgba(0,0,0,.30);
+  }
+  .secIcon svg{width:18px;height:18px}
+  .secTxt{
+    min-width:0;
+    line-height:1.45;
+  }
+  .secTxt strong{
+    display:block;
+    font-size:13px;
+    font-weight:1000;
+    color:#eaf0ff;
+    letter-spacing:-.2px;
+  }
+  .secTxt small{
+    display:block;
+    margin-top:4px;
+    font-size:12px;
+    font-weight:850;
+    color: rgba(229,231,235,.68);
+  }
+  .domainPill{
+    display:inline-flex;
+    margin-top:8px;
+    align-items:center;
+    gap:8px;
+    padding:7px 10px;
+    border-radius:999px;
+    font-size:12px;
+    font-weight:1000;
+    border:1px solid rgba(96,165,250,.22);
+    background: rgba(59,130,246,.12);
+    color: rgba(234,240,255,.92);
+    width:fit-content;
+  }
+  .domainPill code{
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
+    font-size:11.5px;
+    opacity:.95;
   }
 
   /* ✅ Google button + divider */
-  .oauth{
-    margin-top:10px;
-  }
+  .oauth{ margin-top:10px; }
 
   .oauthBtn{
     width:100%;
@@ -153,13 +215,11 @@
     transition:.15s ease;
     box-shadow: 0 16px 45px rgba(0,0,0,.25);
   }
-
   .oauthBtn:hover{
     transform: translateY(-1px);
     background: rgba(255,255,255,0.08);
     border-color: rgba(255,255,255,0.22);
   }
-
   .oauthBtn:active{ transform: translateY(0px); }
 
   .gIcon{
@@ -270,6 +330,23 @@
 
   .btn:hover{transform: translateY(-1px); filter:brightness(1.02);}
   .btn:active{transform: translateY(0px);}
+
+  .legalRow{
+    margin-top:10px;
+    display:flex;
+    gap:10px;
+    flex-wrap:wrap;
+    justify-content:center;
+    font-size:12px;
+    color: rgba(229,231,235,.65);
+    font-weight:900;
+  }
+  .legalRow a{
+    color:#93c5fd;
+    text-decoration:none;
+    font-weight:1000;
+  }
+  .legalRow a:hover{text-decoration:underline;}
 
   .msg{
     margin-top:14px;
@@ -450,6 +527,29 @@
     <h1>Login</h1>
     <div class="sub">Access your Veloci Global Markets account</div>
 
+    <!-- ✅ NEW: Anti-phishing / identity banner -->
+    <div class="securityBanner" role="note" aria-label="Security notice">
+      <div class="secTop">
+        <div class="secIcon" aria-hidden="true">
+          <svg viewBox="0 0 24 24" fill="none">
+            <path d="M12 2l7 4v6c0 5-3 9-7 10C8 21 5 17 5 12V6l7-4Z" stroke="white" opacity=".9" stroke-width="1.7"/>
+            <path d="M9 12l2 2 4-5" stroke="white" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </div>
+        <div class="secTxt">
+          <strong>Secure sign-in • Protect your account</strong>
+          <small>
+            Always verify you’re on the official domain before entering credentials.
+            We will never request your password via email or direct message.
+          </small>
+        </div>
+      </div>
+      <div class="domainPill" title="Official domain">
+        ✅ Official:
+        <code id="domainText">veloci-global-markets.online</code>
+      </div>
+    </div>
+
     <!-- ✅ Google Sign In -->
     <div class="oauth">
       <button class="oauthBtn" onclick="signInWithGoogle()">
@@ -491,6 +591,14 @@
     </div>
 
     <button class="btn" onclick="login()">Login</button>
+
+    <!-- ✅ NEW: legal row directly under button -->
+    <div class="legalRow">
+      <span>By signing in you agree to our</span>
+      <a href="terms.html" rel="noopener">Terms</a>
+      <span>and</span>
+      <a href="privacy.html" rel="noopener">Privacy Notice</a>
+    </div>
 
     <p id="msg" class="msg"></p>
 
@@ -548,6 +656,12 @@ const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYm
 
 const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
+/* ✅ domain display for trust banner */
+(function(){
+  const el = document.getElementById("domainText");
+  if(el) el.textContent = window.location.hostname || "veloci-global-markets.online";
+})();
+
 checkSessionSafely();
 
 async function checkSessionSafely(){
@@ -586,7 +700,6 @@ function showSuccessModal(){
 async function signInWithGoogle(){
   setMsg("", "Opening Google sign-in…");
 
-  /* ✅ CHANGED: go directly to /session/ after Google login */
   const redirectTo = window.location.origin + "/session/";
 
   const { error } = await supabaseClient.auth.signInWithOAuth({
